<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateProfileActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:width="0dp"
                android:hint="@string/new_password" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/confirmPasswordButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign_in_button"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/confirmPassword" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/messageTextView"
            android:textAlignment="center"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="169dp"
            tools:layout_editor_absoluteY="484dp" />


        <Button
            android:id="@+id/profileViewButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/goBack" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>